--- a/form-2/style.css
+++ b/form-2/style.css
@@ -5,7 +5,7 @@ body{
     height: 100vh;
 }
 
-form{
+.check{
     padding: 30px;
     border: 3px solid darkblue;
     border-radius: 10px;
@@ -36,8 +36,18 @@ textarea{
     display: inline;
     color: darkblue;
 }
-input[type = "submit"]{
+input[type = "radio"], .radio label,.btn{
+    cursor: pointer;
+}
+.btn{
+    display: block;
     margin: 0 auto;
+    margin-top: 15px;
     color: darkblue;
+    width: 100px;
+    height: 30px;
+}
+hr{
+    margin: 0;
 }
 
