--- a/button.css
+++ b/button.css
@@ -8,19 +8,19 @@
 
     font-size: 20px;
     line-height: 40px;
-    color: rgb(43, 43, 43);
+    color: rgba(60, 60, 192, 0.856);
     text-align: center;
     text-decoration: none;    
 
     background-color: transparent;
 
-    border: 1px solid rgb(43, 43, 43);
+    border: 1px solid rgba(60, 60, 192, 0.856);
     outline: none;
     
     margin-top: 20px;
     
     cursor: pointer;
-    transition: 0.6s all;
+    transition: color 0.5s;
     z-index: 1;
 }
 .btn:hover{
@@ -39,8 +39,8 @@
     width: 100%;
     height: 100%;
     margin-left: -50%;
-    background-color: #000;
+    background-color: rgba(60, 60, 192, 0.856);
     z-index: -1;
     transform: scaleX(0);
-    transition: .6s ease all;
+    transition: .5s ease all;
 }
