--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 body{
     display: flex;
 }
+pre{
+    margin: 0;
+}
 .form{
     width: fit-content;
-    padding: 20px;
+    padding: 10px 20px;
     margin-right: 30px;
-    border: 1px solid black;
+    border: 1px solid rgba(60, 60, 192, 0.856);
     border-radius: 10px;
+    background: linear-gradient( rgba(60, 60, 192, 0.856), #fff);
     order: -1;
 
 }
@@ -30,18 +34,14 @@ body{
 }
 .form-group input:not(input[type=checkbox]), .form-group textarea{
     width: 300px;
+    font-size: 18px;
     margin-bottom: 17px;
-    background-color: transparent;
+    background-color: rgb(175, 175, 231);
     border: 1px solid rgb(77, 74, 74);
     border-radius:10px;
 }
 
-.form-group.checkbox{
-    /* display: flex; */
-    align-items: center;
-    justify-content: space-between;
-    width: 300px;
-}
+
 .form-group label{
     display: inline-block;    
 }
@@ -59,7 +59,7 @@ input[type=checkbox]{
     position: relative;
     width: 30px;
     height: 30px;
-    border: 1px solid black;
+    border: 1px solid rgba(60, 60, 192, 0.856);
     border-radius: 5px;
 }
 .fake::before{
@@ -68,10 +68,10 @@ input[type=checkbox]{
     display: block;
     width: 100%;
     height: 100%;
-    background: url('https://image.flaticon.com/icons/png/512/61/61141.png');
+    background: url('checkbox.png');
     background-size: contain;
     background-repeat: no-repeat;
-    /* background: #000; */
+
     opacity: 0;
     transition: 0.4s;
     z-index: 2;
@@ -90,4 +90,8 @@ input[type=checkbox]:checked + .fake::before {
 .agree label{
     width: 250px;
     margin-left: 20px;
+}
+
+.file{
+    margin-top: 20px;
 }
