--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,21 @@ body{
 pre{
     margin: 0;
 }
+p{
+    margin: 0;
+    padding: 0;
+}
+label, .choice-os{
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none; 
+}
+
 .form{
     width: fit-content;
+    height: auto;
     padding: 10px 20px;
     margin-right: 30px;
     border: 1px solid rgba(60, 60, 192, 0.856);
@@ -14,6 +27,14 @@ pre{
     order: -1;
 
 }
+
+.form_main{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 640px;
+}
+
 
 .form-group>*{
     display: block;
@@ -45,7 +66,9 @@ pre{
 .form-group label{
     display: inline-block;    
 }
-
+.file{
+    align-self: center;
+}
 ​
 input[type=checkbox], label[for='agree']{
     cursor: pointer;
@@ -68,7 +91,7 @@ input[type=checkbox]{
     display: block;
     width: 100%;
     height: 100%;
-    background: url('checkbox.png');
+    background: url('../icons/checkbox.png');
     background-size: contain;
     background-repeat: no-repeat;
 
@@ -95,3 +118,65 @@ input[type=checkbox]:checked + .fake::before {
 .file{
     margin-top: 20px;
 }
+
+
+.btns-group{
+    display: flex;
+    justify-content: space-between;
+    width: 320px;
+}
+.radio-group{
+    display: flex;
+    width: 306px;
+    margin: 0 auto;
+
+    justify-content: space-around;
+    text-align: center;
+}
+.choice-os{
+    margin: 15px 0;
+}
+.windows, .mac, .windows label, .windows p, .mac label, .mac p{
+    cursor: pointer;
+}
+.windows:hover, .mac:hover, .windows label:hover, .windows p:hover, .mac label:hover, .mac p:hover{
+    filter: drop-shadow(0 0 0.75rem rgba(87, 111, 177, 0.856));
+}
+
+
+
+
+input[type=radio]{
+    display: none;
+}
+.fake-radio{
+    display: inline-block;
+    position: relative;
+    width: 75px;
+    height: 75px;
+}
+.fake-radio::before{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 100%;
+    content: "";
+    z-index: 5;
+    background-repeat: no-repeat;
+    
+}
+.windows-icon.fake-radio::before{
+    background: url('../icons/windows.png');
+    background-size: contain;
+}
+.mac-icon.fake-radio::before{
+    background: url('../icons/mac_os.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+input[type=radio]:checked + .fake-radio::before{
+    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 26, 0.856));
+    transform: scale(1.15); 
+} 
